# githubpypireleasetesting

./: .github_changelog_generator  README.md  pyproject.toml
.github/workflows/: draft-new-release.yml  publish-new-release.yml  release-notes-preview.yml
githubpypireleasetesting/: __init__.py
