[tool.poetry]
name = "githubpypireleasetesting"
version = "0.1.0"
description = "A test for actions to release to pypi testing"
authors = ["C. Allwardt <3979063+craig8@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
